--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <meta http-equiv="content-type" content="text/html;charset=utf-8">
 <link rel="shortcut icon" href="/favicon.ico">
 <TITLE>Перенаправлення</TITLE>
-<META HTTP-EQUIV="refresh" content="1; url=https://we.ua/@furiyaai">
+<META HTTP-EQUIV="refresh" content="1; url=https://we.ua/furiyaai">
 </HEAD>
-<BODY onLoad="location.replace('https://we.ua/@furiyaai'+document.location.hash)">
-Перенаправляємо вас на https://we.ua/@furiyaai</BODY>
-<!-- <script language="JavaScript">  window.location.href = "https://we.ua/@furiyaai" </script> -->
+<BODY onLoad="location.replace('https://we.ua/furiyaai'+document.location.hash)">
+Перенаправляємо вас на https://we.ua/furiyaai</BODY>
+<!-- <script language="JavaScript">  window.location.href = "https://we.ua/furiyaai" </script> -->
 </HTML>
